[gd_scene load_steps=21 format=3 uid="uid://c22btbsuiy0np"]

[ext_resource type="Script" path="res://assets/Scripts/tutorial/green_tutorial.gd" id="1_t748n"]
[ext_resource type="Texture2D" uid="uid://cibcntstf71xs" path="res://assets/sokoban_tilesheet.png" id="2_dh2ed"]
[ext_resource type="Texture2D" uid="uid://josmu1668w6w" path="res://assets/Sprite/Level1Background.png" id="3_4b6me"]
[ext_resource type="PackedScene" uid="uid://cwmqt23ggfnap" path="res://assets/Scenes/Kids/green.tscn" id="4_maotk"]
[ext_resource type="Texture2D" uid="uid://dtttaxmdb5gtu" path="res://assets/Sprite/UI/calendar.png" id="5_ku38h"]
[ext_resource type="PackedScene" uid="uid://b0wysm6c2nqgj" path="res://assets/Scenes/player.tscn" id="7_4b2yx"]
[ext_resource type="Texture2D" uid="uid://dti7dv1aawhij" path="res://assets/Sprite/UI/estrelaCAPITULO1.png" id="7_lo68g"]
[ext_resource type="FontFile" uid="uid://bgort6x02naib" path="res://assets/fonts/Retro Gaming.ttf" id="9_hh4d2"]
[ext_resource type="Texture2D" uid="uid://bnwqe2yni82y7" path="res://assets/Sprite/UI/talking.png" id="9_ktkxb"]
[ext_resource type="Texture2D" uid="uid://bgb687c7a6v85" path="res://assets/Sprite/UI/keys/space.png" id="10_ixlvi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rkwde"]
texture = ExtResource("2_dh2ed")
texture_region_size = Vector2i(64, 64)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0

[sub_resource type="TileSet" id="TileSet_14sou"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rkwde")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gh75o"]
size = Vector2(28.0374, 20)

[sub_resource type="LabelSettings" id="LabelSettings_66vi6"]
line_spacing = 0.0
font = ExtResource("9_hh4d2")
font_size = 70
font_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50lxg"]
size = Vector2(38, 624)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w3ky"]
size = Vector2(31.9988, 624)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eivbf"]
size = Vector2(48, 56)

[sub_resource type="Animation" id="Animation_gfrsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3i6io"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtmkf"]
_data = {
"RESET": SubResource("Animation_gfrsn"),
"fade": SubResource("Animation_3i6io")
}

[node name="GreenTutorial" type="Node2D"]
script = ExtResource("1_t748n")

[node name="TileMap" type="TileMap" parent="." groups=["Tilemap"]]
unique_name_in_owner = true
tile_set = SubResource("TileSet_14sou")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(655370, 262144, 0, 720895, 262144, 0, 655359, 262144, 0, 589823, 262144, 0, 524287, 262144, 0, 458751, 262144, 0, 393215, 262144, 0, 327679, 262144, 0, 262143, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, -1, 262144, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, -65531, 262144, 0, -65530, 262144, 0, -65529, 262144, 0, -65528, 262144, 0, -65527, 262144, 0, -65526, 262144, 0, 655369, 262144, 0, 655368, 262144, 0, 655367, 262144, 0, 655366, 262144, 0, 655365, 262144, 0, 655364, 262144, 0, 655361, 262144, 0, 655360, 262144, 0, 655362, 262144, 0, 655363, 262144, 0, -65525, 262144, 0, -65524, 262144, 0, -65523, 262144, 0, -65522, 262144, 0, -65521, 262144, 0, -65520, 262144, 0, -65519, 262144, 0, 655371, 262144, 0, 655372, 262144, 0, 655373, 262144, 0, 655374, 262144, 0, 655376, 262144, 0, 655377, 262144, 0, 589841, 262144, 0, 589840, 262144, 0, 393217, 262144, 0, 327680, 262144, 0, 262144, 262144, 0, 196608, 262144, 0, 196609, 262144, 0, 131073, 262144, 0, 65537, 262144, 0, 1, 262144, 0, 65536, 262144, 0, 0, 262144, 0, 131072, 262144, 0, 262145, 262144, 0, 327681, 262144, 0, 393216, 262144, 0, 524288, 262144, 0, 589825, 262144, 0, 524289, 262144, 0, 458753, 262144, 0, 458752, 262144, 0, 16, 262144, 0, 65552, 262144, 0, 131088, 262144, 0, 196624, 262144, 0, 262160, 262144, 0, 327696, 262144, 0, 393232, 262144, 0, 458768, 262144, 0, 524304, 262144, 0, 524305, 262144, 0, 458769, 262144, 0, 393233, 262144, 0, 327697, 262144, 0, 262161, 262144, 0, 196625, 262144, 0, 131089, 262144, 0, 17, 262144, 0, 65553, 262144, 0)
layer_1/name = "walls"
layer_1/tile_data = PackedInt32Array(-65518, 262144, 0, 18, 262144, 0, 65554, 262144, 0, 131090, 262144, 0, 196626, 262144, 0, 262162, 262144, 0, 327698, 262144, 0, 393234, 262144, 0, 458770, 262144, 0, 524306, 262144, 0, 589842, 262144, 0, 655378, 262144, 0, 655377, 262144, 0, 655376, 262144, 0, 589840, 262144, 0, 589841, 262144, 0, 524305, 262144, 0, 524304, 262144, 0, 458768, 262144, 0, 458769, 262144, 0, 393233, 262144, 0, 393232, 262144, 0, 327696, 262144, 0, 327697, 262144, 0, 262161, 262144, 0, 262160, 262144, 0, 196624, 262144, 0, 196625, 262144, 0, 131088, 262144, 0, 131089, 262144, 0, 65553, 262144, 0, -65521, 262144, 0, 65552, 262144, 0, 17, 262144, 0, -65519, 262144, 0, -65520, 262144, 0, -65522, 262144, 0, -65523, 262144, 0, -65524, 262144, 0, -65525, 262144, 0, -65526, 262144, 0, -65527, 262144, 0, -65528, 262144, 0, -65529, 262144, 0, -65530, 262144, 0, -65531, 262144, 0, -65532, 262144, 0, -65533, 262144, 0, 3, 262144, 0, 4, 262144, 0, 5, 262144, 0, 6, 262144, 0, 7, 262144, 0, 8, 262144, 0, 9, 262144, 0, 10, 262144, 0, 11, 262144, 0, 12, 262144, 0, 13, 262144, 0, 14, 262144, 0, 65543, 262144, 0, 65546, 262144, 0, 1, 262144, 0, -65535, 262144, 0, -65536, 262144, 0, -1, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 655360, 262144, 0, 655361, 262144, 0, 655363, 262144, 0, 655364, 262144, 0, 655365, 262144, 0, 655366, 262144, 0, 655367, 262144, 0, 655368, 262144, 0, 655369, 262144, 0, 655370, 262144, 0, 655371, 262144, 0, 655372, 262144, 0, 655373, 262144, 0, 655374, 262144, 0, 262145, 262144, 0, 327681, 262144, 0, 393217, 262144, 0, 589825, 262144, 0, 589824, 262144, 0, 524288, 262144, 0, 16, 262144, 0, 0, 262144, 0, 65536, 262144, 0, 65537, 262144, 0, 131073, 262144, 0, 196609, 262144, 0, 196608, 262144, 0, 131072, 262144, 0, 262144, 262144, 0, 327680, 262144, 0, 393216, 262144, 0, 458752, 262144, 0, 458753, 262144, 0, 524289, 262144, 0, 786431, 262144, 0, 720896, 262144, 0, 720897, 262144, 0, 720898, 262144, 0, 720899, 262144, 0, 720900, 262144, 0, 720901, 262144, 0, 720902, 262144, 0, 720903, 262144, 0, 720904, 262144, 0, 720905, 262144, 0, 720906, 262144, 0, 720907, 262144, 0, 720908, 262144, 0, 720909, 262144, 0, 720910, 262144, 0, 720911, 262144, 0, 720912, 262144, 0, 720913, 262144, 0, 720914, 262144, 0, 655362, 262144, 0, 655375, 262144, 0, 589839, 262144, 0, 524303, 262144, 0, 458767, 262144, 0, 393231, 262144, 0, 327695, 262144, 0, 262159, 262144, 0, 196623, 262144, 0, 131087, 262144, 0, 65551, 262144, 0, 15, 262144, 0, 589826, 262144, 0, 524290, 262144, 0, 458754, 262144, 0, 393218, 262144, 0, 327682, 262144, 0, 262146, 262144, 0, 196610, 262144, 0, 131074, 262144, 0, 65538, 262144, 0, 2, 262144, 0, -65534, 262144, 0)

[node name="Background" type="TextureRect" parent="."]
offset_right = 1780.0
offset_bottom = 989.0
scale = Vector2(0.647, 0.647)
texture = ExtResource("3_4b6me")

[node name="Green" parent="." instance=ExtResource("4_maotk")]
position = Vector2(400, 272)

[node name="Exit" type="Area2D" parent="." groups=["Exit"]]
position = Vector2(320, 96)
scale = Vector2(4.27999, 1)
disable_mode = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(59.8132, 8)
shape = SubResource("RectangleShape2D_gh75o")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Hud" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Calendar" type="TextureRect" parent="Hud/Hud"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0112847
anchor_top = -0.009375
anchor_right = 0.118056
anchor_bottom = 0.182812
offset_right = 7.08072
offset_bottom = 1.16562
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ku38h")

[node name="Moves" type="Label" parent="Hud/Hud/Calendar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176813
anchor_top = 0.177183
anchor_right = 0.714941
anchor_bottom = 0.902021
grow_horizontal = 2
grow_vertical = 2
text = "11"
label_settings = SubResource("LabelSettings_66vi6")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Stars" type="HBoxContainer" parent="Hud/Hud"]
layout_mode = 0
offset_left = 139.0
offset_top = 13.0
offset_right = 507.0
offset_bottom = 113.0
scale = Vector2(0.67, 0.67)

[node name="Star" type="TextureRect" parent="Hud/Hud/Stars"]
layout_mode = 2
texture = ExtResource("7_lo68g")
metadata/_edit_use_anchors_ = true

[node name="Star2" type="TextureRect" parent="Hud/Hud/Stars"]
layout_mode = 2
texture = ExtResource("7_lo68g")
metadata/_edit_use_anchors_ = true

[node name="Star3" type="TextureRect" parent="Hud/Hud/Stars"]
layout_mode = 2
texture = ExtResource("7_lo68g")
metadata/_edit_use_anchors_ = true

[node name="Walls" type="Area2D" parent="." groups=["Walls"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(104, 352)
shape = SubResource("RectangleShape2D_50lxg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(1008, 352)
shape = SubResource("RectangleShape2D_50lxg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(576, 48)
rotation = -1.5708
shape = SubResource("RectangleShape2D_1w3ky")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(576, 656)
rotation = -1.5708
shape = SubResource("RectangleShape2D_1w3ky")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls"]
position = Vector2(488, 92)
shape = SubResource("RectangleShape2D_eivbf")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls"]
position = Vector2(664, 88)
shape = SubResource("RectangleShape2D_eivbf")

[node name="Player" parent="." instance=ExtResource("7_4b2yx")]
position = Vector2(528, 472)

[node name="Tutorial" type="CanvasLayer" parent="."]

[node name="Box" type="TextureRect" parent="Tutorial"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ktkxb")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial/Box"]
libraries = {
"": SubResource("AnimationLibrary_mtmkf")
}

[node name="Timer" type="Timer" parent="Tutorial"]
unique_name_in_owner = true

[node name="TextLabel" type="RichTextLabel" parent="Tutorial"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_top = -0.0125
offset_left = 264.0
offset_top = 532.0
offset_right = 912.0
offset_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_fonts/normal_font = ExtResource("9_hh4d2")
theme_override_font_sizes/normal_font_size = 18
text = "Pressiona a tecla           para seguir o diálogo"
scroll_following = true
autowrap_mode = 2
tab_size = 21
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="SpaceKey" type="Sprite2D" parent="Tutorial"]
unique_name_in_owner = true
position = Vector2(503, 536)
scale = Vector2(0.183333, 0.183333)
texture = ExtResource("10_ixlvi")

[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="timeout" from="Tutorial/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Tutorial/Timer" to="Tutorial" method="_on_timer_timeout"]
